--- a/CountryDetails/CountryDetails/Base.lproj/LaunchScreen.storyboard
+++ b/CountryDetails/CountryDetails/Base.lproj/LaunchScreen.storyboard
@@ -15,13 +15,38 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Canada" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tP8-Es-Z6l">
+                                <rect key="frame" x="123.5" y="433" width="167.5" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Interview Assignment for @Wipro Digital" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="n4b-m3-Tey">
+                                <rect key="frame" x="67" y="661" width="280" height="73"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="73" id="q49-N3-00z"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" red="0.1042946432580163" green="0.32840984479015362" blue="0.40040985823887854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="tP8-Es-Z6l" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="KIB-7S-9Pe"/>
+                            <constraint firstItem="n4b-m3-Tey" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="R9H-9s-esx"/>
+                            <constraint firstItem="n4b-m3-Tey" firstAttribute="centerX" secondItem="tP8-Es-Z6l" secondAttribute="centerX" id="W81-Di-xSe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="n4b-m3-Tey" secondAttribute="bottom" constant="128" id="ceP-4h-Bb7"/>
+                            <constraint firstItem="tP8-Es-Z6l" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="vBA-O4-MLG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
 </document>
